# cpsc5800-final-proj

./: README.md  pyproject.toml  speeding_car_detection.ipynb
