[project]
name = "speeding-detector"
version = "0.1.0"
description = "CPSC5800 Final Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "filterpy>=1.4.5",
    "imageio>=2.37.2",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "scipy>=1.16.3",
]
